--- a/noticias/noticiasStyle.css
+++ b/noticias/noticiasStyle.css
@@ -1,78 +1,154 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-body{
-    background-color: #f0f0f0;
+/* so ta cores*/
+
+body {
+  background-color: #2a2a2a;
+  color: #f2e9dc;
+  background-image: url('assets/ttpd5.jpg'); /* Corrigido o path */
+  background-size: cover;
+  background-position: start;
+  position: center;
 }
 
-.titulo{
-    font-family: 'Alex Brush', cursive;
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(51, 44, 39, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: -1;
+}
+
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container{
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 300px 1fr;
+    min-height: 100vh;
+}
+
+header{
+    font-family: 'Playfair Display', serif;
+    background-color: #1f1e21;
+    color: #f4f1ec;
+    grid-column: 1/-1;
+    grid-row: 1/2;
     text-align: center;
-    font-size:50px;
-    background-color: #1C211F;
-    color: #edebe7;
+    padding: 10px;
+    padding-top: 20px;
 }
 
-.menu{
-    font-family: 'Poppins', sans-serif;
-    color: #edebe7;
-    background-color: #1C211F;
+header h1{
+    font-size: 40px;
+}
+
+nav {
+    background-color: #1f1e21;
+    grid-column: 1/-1;
+    grid-row: 2; 
     text-align: center;
-    text-decoration: none;
-    font-size:25px;
-    margin-right:12px;
+    margin-top: 5px;
+    padding: 10px;
 }
 
-.menu:hover{
-    color: #8c8987;
+nav a{
+color: #d6c1a1;
+font-weight: 500;
+font-family: 'Lora', serif;
+font-size: 25px;
+text-decoration: none;
+margin: 0 10px;
+transition: color 0.3s ease;
+
+}
+
+nav a:hover {
+  color: #9db4c0;
 }
 
 main{
-    text-align: left;
-    padding: 20px;
+    display: flex;
+    flex-direction: column; 
+    grid-auto-rows: auto;
+    grid-column: 2;
+    padding: 30px;
+}
+
+aside{
+    grid-auto-rows: auto;
+    grid-column:1;
+    color: #e4dfd9;
+    margin-left: 15px;
+}
+
+aside img{
+    margin-top: 10px;
+}
+
+footer{
+display: flex;
+/*background-color: #2a1e2e;*/
+background-color: #1f1e21;
+color: #f4f4f4;
+text-align: center;
+justify-content: center;
+align-items: center;
+grid-column: 1/-1;
+padding: 10px;
+font-size: 20px;
 }
 
 .noticia{
   display: flex;
-  font-family: "Roboto", sans-serif;
-  margin-bottom: 30px;
-  margin-left: 350px;
-  margin-right: 350px;
+  align-items: center; 
+  margin-left: 5rem;
+  margin-right: 15rem;
+  padding: 2rem;
+  background-color: rgba(31, 30, 33, 0.4);
+  border-radius: 20px;
+  margin-bottom: 2rem;
+  box-shadow: 0 8px 8px rgba(0,0,0,0.2);
+}
+
+.noticia h2 {
+  font-family: 'Playfair Display', serif;
+  color: #ebdcc8;
+  font-size: 1.7rem;
+
+}
+
+.noticia p {
+  font-family: 'Lora', serif;
+  color: #e4dfd9;
+  font-size: 1.2rem;
+  margin-top: 7px;
 }
 
 .noticia img{
-    border-radius: 8%;
-    margin-right: 10px;
-
+    margin-right: 0.8rem;
+    margin-top: 0.8rem;
+    border-radius: 40px;
+    font-weight: bold;
 }
 
- .conteudo h2 {
-    display: flex;
-    flex-direction:column;
-    font-size:30px;
-    margin-top: 40px;
-    color: #a08c8c;
-}
-
-.conteudo p {
-    display: flex;
-    flex-direction:column;
-    font-size:20px;
-    margin-top: 10px;
-    color: #8c8c78;
-}
-.anuncio{
-    padding-left: 5px;
-    
+.teste{
+   text-align: justify;
+   padding-right: 2rem;
+   margin-left: 10px;
 }
 
 
-footer{
-    font-family: 'Poppins', sans-serif;
-    color: #a08c8c;
-    background-color: #1C211F;
-    text-align: center;
-    font-size:20px;
-}
